dnl Process this file with autoconf to produce a configure script
AC_INIT(it0029-gnu-libsName, 0.1)

AC_CONFIG_AUX_DIR(config)
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE(it0029-gnu-libsName, 0.1)

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL

AC_CONFIG_FILES( Makefile src/Makefile src/lib1/Makefile src/lib2/Makefile )

AC_OUTPUT